<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_meeting_activity"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:context=".meeting_list.AddMeetingActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/meeting_topic_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/meeting_topic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/meetingTopic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:inputType="textPersonName" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner_textinputlayout"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:hint="@string/meeting_room"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/arrow_down"
                android:focusable="false"
                android:inputType="textNoSuggestions"
                />

            <Spinner
                android:id="@+id/meetingRoomListSpinner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:spinnerMode="dialog"

                />


        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/button_setup_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#3fb9bd"
            android:text="@string/set_up_date"
            android:textAllCaps="false"
            android:textColor="#FFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_setup_time"
            app:layout_constraintTop_toBottomOf="@+id/spinner_textinputlayout" />

        <Button
            android:id="@+id/button_setup_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#3fb9bd"
            android:text="@string/set_up_time"
            android:textAllCaps="false"
            android:textColor="#FFFF"
            app:layout_constraintEnd_toStartOf="@+id/button_setup_date"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_textinputlayout" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participantsTextView"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/chipGroup2"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:duplicateParentState="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_setup_date"/>

        <TextView
            android:id="@+id/emptyChipGroupMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_participants"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/chipGroup2"
            app:layout_constraintStart_toStartOf="parent"
        />








        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_participants_here"
            android:minWidth="32dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meeting_topic_text_input_layout">


            <EditText
                android:id="@+id/edit_text_participants"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_create_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="276dp"
            android:backgroundTint="#3fb9bd"
            android:text="@string/create_meeting"
            android:textColor="#FFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_setup_date" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
