<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".meeting_list.ListMeetingActivity"
    android:id="@+id/main_constraint_layout">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/meeting_list_row" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMeetinfab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:tint="#FFFF"
        app:backgroundTint="#ce0a24"
        android:src="@drawable/ic_baseline_add_24"
        />

    <Spinner
        android:id="@+id/meetingRoomListSpinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:spinnerMode="dialog"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />




</androidx.constraintlayout.widget.ConstraintLayout>

